modified:   src/com/forum/client/AdminPanel.java 	modified:   src/com/forum/client/LoginDataSource.java 	modified:   src/com/forum/client/LoginForm.java 	modified:   src/com/forum/client/RegistrationDataSource.java 	modified:   src/com/forum/server/AdminServiceImpl.java

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -6,6 +6,15 @@
 <web-app>
   
   <!-- Servlets -->
+  <servlet>
+    <servlet-name>AdminServiceImpl</servlet-name>
+    <servlet-class>com.forum.server.AdminServiceImpl</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>AdminServiceImpl</servlet-name>
+    <url-pattern>/forum/adminTasks</url-pattern>
+  </servlet-mapping>
   
   <!-- Default page to serve -->
   <welcome-file-list>
